--- a/Resources/administration/src/module/sw-configuration/component/sw-configuration-option-list/sw-configuration-option-list.html.twig
+++ b/Resources/administration/src/module/sw-configuration/component/sw-configuration-option-list/sw-configuration-option-list.html.twig
@@ -1,70 +1,119 @@
-<sw-card :isLoading="group.isLoading" class="sw-configuration-option-list">
-    <div class="sw-configuration-option-list__toolbar">
+{% block sw_configuration_option_list %}
+    <sw-card :isLoading="group.isLoading" class="sw-configuration-option-list">
 
-        <sw-container columns="1fr 32px minmax(100px, 200px)" gap="0 10px">
-            <sw-simple-search-field @searchTermChanged="onSearch" v-model="term" />
+        {% block sw_configuration_option_list_toolbar %}
+            <div class="sw-configuration-option-list__toolbar">
 
-            <sw-button :disabled="deleteButtonDisabled" @click="onDeleteOptions" square size="small" class="sw-configuration-option-list__delete-button">
-                <sw-icon name="default-action-trash" small />
-            </sw-button>
+                {% block sw_configuration_option_list_toolbar_container %}
+                    <sw-container columns="1fr 32px minmax(100px, 200px)" gap="0 10px">
 
-            <sw-button :disabled="group.isLoading" @click="onAddOption(group)" size="small" class="sw-configuration-option-list__add-button">
-                {{ $tc('sw-configuration.detail.addOption') }}
-            </sw-button>
-        </sw-container>
-    </div>
+                        {% block sw_configuration_option_list_toolbar_search %}
+                            <sw-simple-search-field @searchTermChanged="onSearch" v-model="term" />
+                        {% endblock %}
 
-    <sw-grid v-if="options.length || term" class="sw-configuration-option-list__grid" ref="grid" :items="options" :isFullpage="false" table selectable @inline-edit-cancel="onInlineEditCancel" @sw-grid-select-item="selectionChanged" >
-        <template slot="columns" slot-scope="{ item }">
+                        {% block sw_configuration_option_list_toolbar_delete %}
+                            <sw-button :disabled="deleteButtonDisabled" @click="onDeleteOptions" square size="small" class="sw-configuration-option-list__delete-button">
+                                <sw-icon name="default-action-trash" small />
+                            </sw-button>
+                        {% endblock %}
 
-            <sw-grid-column dataIndex="name" editable truncate flex="minmax(150px, 1fr)" :label="$tc('sw-configuration.detail.labelOptionName')">
-                {{ item.name }}
-                <sw-field type="text" slot="inline-edit" v-model="item.name" />
-            </sw-grid-column>
+                        {% block sw_configuration_option_list_toolbar_add %}
+                            <sw-button :disabled="group.isLoading" @click="onAddOption(group)" size="small" class="sw-configuration-option-list__add-button">
+                                {{ $tc('sw-configuration.detail.addOption') }}
+                            </sw-button>
+                        {% endblock %}
 
-            <sw-grid-column dataIndex="mediaId" flex="250px" :label="$tc('sw-configuration.detail.labelOptionMedia')" class="media-column">
-                <sw-media-field v-model="item.mediaId"></sw-media-field>
-            </sw-grid-column>
+                    </sw-container>
+                {% endblock %}
+            </div>
+        {% endblock %}
 
-            <sw-grid-column dataIndex="colorHexCode" editable flex="100px" :label="$tc('sw-configuration.detail.labelOptionColor')">
-                {{ item.colorHexCode }}
-                <sw-field type="text" slot="inline-edit" v-model="item.colorHexCode" />
-            </sw-grid-column>
+        {% block sw_configuration_option_list_grid %}
+            <sw-grid v-if="options.length || term" class="sw-configuration-option-list__grid" ref="grid" :items="options" :isFullpage="false" table selectable @inline-edit-cancel="onInlineEditCancel" @sw-grid-select-item="selectionChanged" >
 
-            <sw-grid-column dataIndex="position" editable flex="100px" :label="$tc('sw-configuration.detail.labelOptionPosition')">
-                {{ item.position }}
-                <sw-field type="number" slot="inline-edit" v-model="item.position" step="1" pattern="[0-9]" />
-            </sw-grid-column>
+                {% block sw_configuration_option_list_grid_columns %}
+                    <template slot="columns" slot-scope="{ item }">
 
-            <sw-grid-column flex="minmax(100px, 100px)" align="center">
-                <sw-context-button>
-                    <sw-context-menu-item @click="onOptionEdit(item)" v-if="item.isDeleted" disabled>
-                        {{ $tc('sw-configuration.detail.contextMenuOptionView') }}
-                    </sw-context-menu-item>
+                        {% block sw_configuration_option_list_grid_column_name %}
+                            <sw-grid-column dataIndex="name" editable truncate flex="minmax(150px, 1fr)" :label="$tc('sw-configuration.detail.labelOptionName')">
+                            {{ item.name }}
+                            <sw-field type="text" slot="inline-edit" v-model="item.name" />
+                        </sw-grid-column>
+                        {% endblock %}
 
-                    <sw-context-menu-item @click="onOptionEdit(item)" v-else>
-                        {{ $tc('sw-configuration.detail.contextMenuOptionView') }}
-                    </sw-context-menu-item>
+                        {% block sw_configuration_option_list_grid_column_media %}
+                            <sw-grid-column dataIndex="mediaId" flex="250px" :label="$tc('sw-configuration.detail.labelOptionMedia')" class="media-column">
+                                <sw-media-field v-model="item.mediaId"></sw-media-field>
+                            </sw-grid-column>
+                        {% endblock %}
 
-                    <sw-context-menu-item variant="success" @click="onOptionResetDelete(item)" v-if="item.isDeleted">
-                        {{ $tc('sw-configuration.detail.contextMenuOptionResetDelete') }}
-                    </sw-context-menu-item>
+                        {% block sw_configuration_option_list_grid_column_color %}
+                            <sw-grid-column dataIndex="colorHexCode" editable flex="100px" :label="$tc('sw-configuration.detail.labelOptionColor')">
+                                {{ item.colorHexCode }}
+                                <sw-field type="text" slot="inline-edit" v-model="item.colorHexCode" />
+                            </sw-grid-column>
+                        {% endblock %}
 
-                    <sw-context-menu-item variant="danger" @click="onOptionDelete(item)" v-else>
-                        {{ $tc('sw-configuration.detail.contextMenuOptionDelete') }}
-                    </sw-context-menu-item>
-                </sw-context-button>
-            </sw-grid-column>
-        </template>
+                        {% block sw_configuration_option_list_grid_column_position %}
+                            <sw-grid-column dataIndex="position" editable flex="100px" :label="$tc('sw-configuration.detail.labelOptionPosition')">
+                                {{ item.position }}
+                                <sw-field type="number" slot="inline-edit" v-model="item.position" step="1" pattern="[0-9]" />
+                            </sw-grid-column>
+                        {% endblock %}
 
-        <template slot="pagination">
-            <sw-pagination :page="page" :limit="limit" :total="total" :total-visible="7" @page-change="onPageChange" :steps="[10]" />
-        </template>
-    </sw-grid>
+                        {% block sw_configuration_option_list_grid_column_actions %}
+                            <sw-grid-column flex="minmax(100px, 100px)" align="center">
 
-    <sw-empty-state v-else-if="!group.isLoading && !total" :title="$tc('sw-configuration.detail.messageOptionsEmpty')"></sw-empty-state>
+                                {% block sw_configuration_option_list_grid_column_actions_context %}
+                                <sw-context-button>
 
-    <sw-configuration-option-detail v-if="currentOption" :currentOption="currentOption" @save-option-edit="onSaveOption" @cancel-option-edit="onCancelOption" />
+                                    {% block sw_configuration_option_list_grid_column_actions_edit %}
+                                        <sw-context-menu-item v-if="item.isDeleted" @click="onOptionEdit(item)" disabled>
+                                            {{ $tc('sw-configuration.detail.contextMenuOptionView') }}
+                                        </sw-context-menu-item>
 
-    <sw-loader v-if="isLoading"></sw-loader>
-</sw-card>
+                                        <sw-context-menu-item v-else @click="onOptionEdit(item)">
+                                            {{ $tc('sw-configuration.detail.contextMenuOptionView') }}
+                                        </sw-context-menu-item>
+                                    {% endblock %}
+
+                                    {% block sw_configuration_option_list_grid_column_actions_delete %}
+                                        <sw-context-menu-item v-if="item.isDeleted" variant="success" @click="onOptionResetDelete(item)">
+                                            {{ $tc('sw-configuration.detail.contextMenuOptionResetDelete') }}
+                                        </sw-context-menu-item>
+
+                                        <sw-context-menu-item v-else variant="danger" @click="onOptionDelete(item)">
+                                            {{ $tc('sw-configuration.detail.contextMenuOptionDelete') }}
+                                        </sw-context-menu-item>
+                                    {% endblock %}
+
+                                </sw-context-button>
+                                {% endblock %}
+
+                            </sw-grid-column>
+                        {% endblock %}
+
+                    </template>
+                {% endblock %}
+
+                <template slot="pagination">
+                    {% block sw_configuration_option_list_grid_pagination %}
+                        <sw-pagination :page="page" :limit="limit" :total="total" :total-visible="7" @page-change="onPageChange" :steps="[10]" />
+                    {% endblock %}
+                </template>
+            </sw-grid>
+        {% endblock %}
+
+        {% block sw_configuration_option_list_empty_state %}
+            <sw-empty-state v-else-if="!group.isLoading && !total" :title="$tc('sw-configuration.detail.messageOptionsEmpty')"></sw-empty-state>
+        {% endblock %}
+
+        {% block sw_configuration_option_list_detail %}
+            <sw-configuration-option-detail v-if="currentOption" :currentOption="currentOption" @save-option-edit="onSaveOption" @cancel-option-edit="onCancelOption" />
+        {% endblock %}
+
+        {% block sw_configuration_option_list_loader %}
+            <sw-loader v-if="isLoading"></sw-loader>
+        {% endblock %}
+    </sw-card>
+{% endblock %}
