--- a/Resources/administration/src/module/sw-configuration/page/sw-configuration-detail/sw-configuration-detail.html.twig
+++ b/Resources/administration/src/module/sw-configuration/page/sw-configuration-detail/sw-configuration-detail.html.twig
@@ -1,21 +1,43 @@
+{% block sw_configuration_detail %}
 <sw-page class="sw-configuration-detail">
-    <template slot="smart-bar-header">
-        <h2 v-if="group.name">{{ group.name }}</h2>
-        <h2 v-else>{{ $tc('sw-configuration.detail.textHeadline') }}</h2>
-    </template>
 
-    <template slot="smart-bar-actions">
-            <sw-button :disabled="group.isLoading" :routerLink="{ name: 'sw.configuration.index' }">
-                {{ $tc('sw-configuration.detail.buttonCancel') }}
-            </sw-button>
+    {% block sw_configuration_detail_smart_bar_header %}
+        <template slot="smart-bar-header">
 
-            <sw-button variant="primary" class="sw-configuration-detail__save-action" :disabled="group.isLoading" @click.prevent="onSave">
-                {{ $tc('sw-configuration.detail.buttonSave') }}
-            </sw-button>
-    </template>
+            {% block sw_configuration_detail_smart_bar_header_title %}
+                <h2 v-if="group.name">{{ group.name }}</h2>
+                <h2 v-else>{{ $tc('sw-configuration.detail.textHeadline') }}</h2>
+            {% endblock %}
 
-    <sw-card-view slot="content" sidebar>
-        <sw-configuration-detail-base :group="group" />
-        <sw-configuration-option-list v-if="group.sortingType" :group="group" ref="optionListing" />
-    </sw-card-view>
+        </template>
+    {% endblock %}
+
+    {% block sw_configuration_detail_smart_bar_actions %}
+        <template slot="smart-bar-actions">
+            {% block sw_configuration_detail_smart_bar_actions_cancel %}
+                <sw-button :disabled="group.isLoading" :routerLink="{ name: 'sw.configuration.index' }">
+                    {{ $tc('sw-configuration.detail.buttonCancel') }}
+                </sw-button>
+            {% endblock %}
+
+            {% block sw_configuration_detail_smart_bar_actions_save %}
+                <sw-button variant="primary" class="sw-configuration-detail__save-action" :disabled="group.isLoading" @click.prevent="onSave">
+                    {{ $tc('sw-configuration.detail.buttonSave') }}
+                </sw-button>
+            {% endblock %}
+        </template>
+    {% endblock %}
+
+    {% block sw_configuration_detail_content %}
+        <sw-card-view slot="content" sidebar>
+            {% block sw_configuration_detail_content_detail_base %}
+                <sw-configuration-detail-base :group="group" />
+            {% endblock %}
+
+            {% block sw_configuration_detail_content_option_list %}
+                <sw-configuration-option-list v-if="group.sortingType" :group="group" ref="optionListing" />
+            {% endblock %}
+        </sw-card-view>
+    {% endblock %}
 </sw-page>
+{% endblock %}
