--- a/Resources/administration/src/module/sw-configuration/page/sw-configuration-list/sw-configuration-list.html.twig
+++ b/Resources/administration/src/module/sw-configuration/page/sw-configuration-list/sw-configuration-list.html.twig
@@ -1,90 +1,149 @@
-<sw-page class="sw-configuration-list">
-    <template slot="search-bar">
-        <sw-search-bar :placeholder="$tc('sw-configuration.general.placeholderSearchBar')" :searchType="$tc('sw-configuration.general.mainMenuItemGeneral')" @search="this.onSearch" />
-    </template>
+{% block sw_configuration_list %}
+    <sw-page class="sw-configuration-list">
 
-    <template slot="smart-bar-header">
-        <h2>
-            {{ $tc('sw-configuration.list.textConfigurations') }}
-            <span v-if="!isLoading" class="sw-page__smart-bar-amount">
-                ({{ total }})
-            </span>
-        </h2>
-    </template>
+        {% block sw_configuration_list_search_bar %}
+            <template slot="search-bar">
+                <sw-search-bar :placeholder="$tc('sw-configuration.general.placeholderSearchBar')" :searchType="$tc('sw-configuration.general.mainMenuItemGeneral')" @search="this.onSearch" />
+            </template>
+        {% endblock %}
 
-    <template slot="smart-bar-actions">
-        <sw-button :routerLink="{ name: 'sw.configuration.create' }" variant="primary">
-            {{ $tc('sw-configuration.list.buttonAddConfiguration') }}
-        </sw-button>
-    </template>
+        {% block sw_configuration_list_smart_bar_header %}
+            <template slot="smart-bar-header">
 
-    <template slot="content">
-        <div class="sw-configuration-list__content">
+                {% block sw_configuration_list_smart_bar_header_title %}
+                    <h2>
 
-            <sw-grid v-if="total || term" :items="configurations" :selectable="false" isFullpage sidebar>
+                        {% block sw_configuration_list_smart_bar_header_title_text %}
+                            {{ $tc('sw-configuration.list.textConfigurations') }}
+                        {% endblock %}
 
-                <template slot="columns" slot-scope="{ item }">
+                        {% block sw_configuration_list_smart_bar_header_title_amount %}
+                            <span v-if="!isLoading" class="sw-page__smart-bar-amount">
+                                ({{ total }})
+                            </span>
+                        {% endblock %}
 
-                    <sw-grid-column flex="minmax(100px, 1fr)" :label="$tc('sw-configuration.list.columnName')" dataIndex="name" truncate sortable>
-                        <router-link :to="{ name: 'sw.configuration.detail', params: { id: item.id } }">
-                            {{ item.name }}
-                        </router-link>
-                    </sw-grid-column>
+                    </h2>
+                {% endblock %}
 
-                    <sw-grid-column flex="minmax(200px, 2fr)" :label="$tc('sw-configuration.list.columnOptions')" truncate>
-                        <span v-for="(option, index) in item.options" :key="option.id" v-if="index < 4">{{ (index > 0) ?`, ${option.name}`:`${option.name}`}}</span>
-                        <span v-if="item.options.length >= 5">
-                            , ...
-                        </span>
-                    </sw-grid-column>
+            </template>
+        {% endblock %}
 
-                    <sw-grid-column flex="minmax(200px, 2fr)" :label="$tc('sw-configuration.list.columnDescription')" truncate sortable >
-                        {{ item.description }}
-                    </sw-grid-column>
+        {% block sw_configuration_list_ %}
+            <template slot="smart-bar-actions">
 
-                    <sw-grid-column flex="minmax(100px, 100px)" align="center">
-                        <sw-context-button>
-                            <sw-context-menu-item :routerLink="{ name: 'sw.configuration.detail', params: { id: item.id } }">
-                                {{ $tc('sw-configuration.list.contextMenuView') }}
-                            </sw-context-menu-item>
+                {% block sw_configuration_list_add_button %}
+                    <sw-button :routerLink="{ name: 'sw.configuration.create' }" variant="primary">
+                        {{ $tc('sw-configuration.list.buttonAddConfiguration') }}
+                    </sw-button>
+                {% endblock %}
 
-                            <sw-context-menu-item variant="danger" @click="onDelete(item.id)">
-                                {{ $tc('sw-configuration.list.contextMenuDelete') }}
-                            </sw-context-menu-item>
+            </template>
+        {% endblock %}
 
-                        </sw-context-button>
-                    </sw-grid-column>
+        <template slot="content">
 
-                    <sw-modal v-if="showDeleteModal === item.id" @closeModal="onCloseDeleteModal" :title="$tc('sw-configuration.list.modalTitleDelete')" variant="small">
-                        <p class="sw-configuration-list__confirm-delete-text">
-                            {{ $tc('sw-configuration.list.textDeleteConfirm', 0, { name: item.name }) }}
-                        </p>
+            {% block sw_configuration_list_content %}
+                <div class="sw-configuration-list__content">
 
-                        <template slot="modal-footer">
-                            <sw-button @click="onCloseDeleteModal" size="small">
-                                {{ $tc('sw-configuration.list.buttonCancel') }}
-                            </sw-button>
+                    {% block sw_configuration_list_grid %}
+                        <sw-grid v-if="total || term" :items="configurations" :selectable="false" isFullpage sidebar>
 
-                            <sw-button @click="onConfirmDelete(item.id)" variant="primary" size="small">
-                                {{ $tc('sw-configuration.list.buttonDelete') }}
-                            </sw-button>
-                        </template>
-                    </sw-modal>
-                </template>
+                            {% block sw_configuration_list_grid_slots %}
+                                <template slot="columns" slot-scope="{ item }">
 
-                <template slot="pagination">
-                    <sw-pagination :page="page" :limit="limit" :total="total" :total-visible="7" @page-change="onPageChange" />
-                </template>
+                                    {% block sw_configuration_list_grid_columns %}
 
-                <sw-sidebar slot="sidebar">
-                    <sw-sidebar-item icon="default-arrow-360-left" :title="$tc('sw-configuration.list.titleSidebarItemRefresh')" @click="onRefresh" />
-                </sw-sidebar>
+                                        {% block sw_configuration_list_grid_columns_name %}
+                                            <sw-grid-column flex="minmax(100px, 1fr)" :label="$tc('sw-configuration.list.columnName')" dataIndex="name" truncate sortable>
+                                                <router-link :to="{ name: 'sw.configuration.detail', params: { id: item.id } }">
+                                                    {{ item.name }}
+                                                </router-link>
+                                            </sw-grid-column>
+                                        {% endblock %}
 
-            </sw-grid>
+                                        {% block sw_configuration_list_grid_columns_options %}
+                                            <sw-grid-column flex="minmax(200px, 2fr)" :label="$tc('sw-configuration.list.columnOptions')" truncate>
+                                                <span v-for="(option, index) in item.options" :key="option.id" v-if="index < 4">{{ (index > 0) ?`, ${option.name}`:`${option.name}`}}</span>
+                                                <span v-if="item.options.length >= 5">
+                                                    , ...
+                                                </span>
+                                            </sw-grid-column>
+                                        {% endblock %}
 
-            <sw-empty-state v-else-if="!isLoading && !total" :title="$tc('sw-configuration.list.messageEmpty')"></sw-empty-state>
+                                        {% block sw_configuration_list_grid_columns_description %}
+                                            <sw-grid-column flex="minmax(200px, 2fr)" :label="$tc('sw-configuration.list.columnDescription')" truncate sortable >
+                                                {{ item.description }}
+                                            </sw-grid-column>
+                                        {% endblock %}
 
-            <sw-loader v-if="isLoading"></sw-loader>
-        </div>
-    </template>
-</sw-page>
+                                        {% block sw_configuration_list_grid_columns_actions %}
+                                            <sw-grid-column flex="minmax(100px, 100px)" align="center">
+                                                <sw-context-button>
+
+                                                    {% block sw_configuration_list_grid_columns_actions_detail %}
+                                                        <sw-context-menu-item :routerLink="{ name: 'sw.configuration.detail', params: { id: item.id } }">
+                                                            {{ $tc('sw-configuration.list.contextMenuView') }}
+                                                        </sw-context-menu-item>
+                                                    {% endblock %}
+
+
+                                                    {% block sw_configuration_list_grid_columns_actions_delete %}
+                                                        <sw-context-menu-item variant="danger" @click="onDelete(item.id)">
+                                                            {{ $tc('sw-configuration.list.contextMenuDelete') }}
+                                                        </sw-context-menu-item>
+                                                    {% endblock %}
+
+                                                </sw-context-button>
+                                            </sw-grid-column>
+                                        {% endblock %}
+
+                                    {% endblock %}
+
+                                    <sw-modal v-if="showDeleteModal === item.id" @closeModal="onCloseDeleteModal" :title="$tc('sw-configuration.list.modalTitleDelete')" variant="small">
+                                        <p class="sw-configuration-list__confirm-delete-text">
+                                            {{ $tc('sw-configuration.list.textDeleteConfirm', 0, { name: item.name }) }}
+                                        </p>
+
+                                        <template slot="modal-footer">
+                                            <sw-button @click="onCloseDeleteModal" size="small">
+                                                {{ $tc('sw-configuration.list.buttonCancel') }}
+                                            </sw-button>
+
+                                            <sw-button @click="onConfirmDelete(item.id)" variant="primary" size="small">
+                                                {{ $tc('sw-configuration.list.buttonDelete') }}
+                                            </sw-button>
+                                        </template>
+                                    </sw-modal>
+                                </template>
+                            {% endblock %}
+
+                            <template slot="pagination">
+                                {% block sw_configuration_list_grid_pagination %}
+                                    <sw-pagination :page="page" :limit="limit" :total="total" :total-visible="7" @page-change="onPageChange" />
+                                {% endblock %}
+                            </template>
+
+                            {% block sw_configuration_list_sidebar %}
+                                <sw-sidebar slot="sidebar">
+                                    {% block sw_configuration_list_sidebar_refresh_item %}
+                                        <sw-sidebar-item icon="default-arrow-360-left" :title="$tc('sw-configuration.list.titleSidebarItemRefresh')" @click="onRefresh" />
+                                    {% endblock %}
+                                </sw-sidebar>
+                            {% endblock %}
+
+                        </sw-grid>
+                    {% endblock %}
+
+                    {% block sw_configuration_list_empty_state %}
+                        <sw-empty-state v-else-if="!isLoading && !total" :title="$tc('sw-configuration.list.messageEmpty')"></sw-empty-state>
+                    {% endblock %}
+
+                    {% block sw_configuration_list_loader %}
+                        <sw-loader v-if="isLoading"></sw-loader>
+                    {% endblock %}
+                </div>
+            {% endblock %}
+        </template>
+    </sw-page>
+{% endblock %}
