--- a/Resources/administration/src/app/component/media/sw-media-modal-move/sw-media-modal-move.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-move/sw-media-modal-move.html.twig
@@ -15,7 +15,7 @@
 
                     <button v-if="parentFolder && parentFolder.id !== targetFolder.id"
                             class="sw-media-modal-move__breadcrumb-btn --parent"
-                            @click="selection(parentFolder)">
+                            @click="onSelection(parentFolder)">
                         <sw-icon class="sw-media-folder-content__switch-button"
                                  name="small-arrow-small-right"
                                  size="16px">
@@ -25,7 +25,7 @@
 
                     <button v-if="displayFolder && displayFolder.id !== targetFolder.id"
                             class="sw-media-modal-move__breadcrumb-btn"
-                            @click="selection(displayFolder)">
+                            @click="onSelection(displayFolder)">
                         <sw-icon class="sw-media-folder-content__switch-button"
                                  name="small-arrow-small-right"
                                  size="16px">
@@ -35,7 +35,7 @@
 
                     <button v-if="targetFolder"
                             class="sw-media-modal-move__breadcrumb-btn --target"
-                            @click="selection(targetFolder)">
+                            @click="onSelection(targetFolder)">
                         <sw-icon class="sw-media-folder-content__switch-button"
                                  name="small-arrow-small-right"
                                  size="16px">
@@ -44,7 +44,10 @@
                     </button>
                 </div>
                 {% endblock %}
-            <sw-media-folder-content :startFolderId="displayFolderId" :selectedId="targetFolderId" @selected="selection"></sw-media-folder-content>
+            <sw-media-folder-content :startFolderId="displayFolderId"
+                                     :selectedId="targetFolderId"
+                                     @selected="onSelection">
+            </sw-media-folder-content>
         {% endblock %}
 
         {% block sw_media_modal_footer %}
