NEXT-1123 - Wire moveFolderModal to API

--- a/Resources/administration/src/app/component/media/sw-media-folder-content/sw-media-folder-content.less
+++ b/Resources/administration/src/app/component/media/sw-media-folder-content/sw-media-folder-content.less
@@ -19,6 +19,7 @@
 
     .sw-media-folder-content__list-item {
         border-radius: @sw-media-folder-content-border-radius-list-item;
+        padding-right: 10px;
         height: 48px;
         display: grid;
         grid-template-columns: 1fr auto;
