--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -121,8 +121,8 @@
                 v-if="showMoveModal"
                 :itemsToMove="[item]"
                 @sw-media-modal-move-close="closeMoveModal"
-                @sw-media-modal-folder-settings-close="closeMoveModal">
-            </sw-media-modal-move>
+                @sw-media-modal-move-items-moved="onFolderMoved">
+        </sw-media-modal-move>
         {% endblock %}
     </div>
 {% endblock %}
