NEXT-1007 - added color variables

--- a/Resources/administration/src/app/assets/less/variables.less
+++ b/Resources/administration/src/app/assets/less/variables.less
@@ -15,6 +15,10 @@
 @color-steam-cloud:              #D8DDE6;
 @color-link-water:               #FCFCFC;
 @color-light-gray:               #F4F7FA;
+@color-solitude:                 #F0F2F5;
+@color-pattens-blue:             #D1D9E0;
+@color-wedgewood:                #52667A;
+@color-light-slate-grey:         #788A9B;
 @color-drag-select-box:          rgba(0, 162, 255, .4);
 
 // Module colors
